<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/twenty">

    <EditText
        android:id="@+id/fragment_signup_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/fragment_signup_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_signup_finishbtn"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/fragment_signup_cancelbtn"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/two_hundred_twenty"
        android:layout_height="@dimen/fifty"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fifty"
        android:src="@mipmap/other_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_signup_sina_login"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/fifty"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@mipmap/weibo_login" />

        <ImageView
            android:id="@+id/fragment_signup_qq_login"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/fifty"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@mipmap/tencentqq_login" />


    </LinearLayout>


</LinearLayout>