<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tiledstripes" >

    <LinearLayout  android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/twenty" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorGray"
            android:orientation="vertical"
            android:padding="@dimen/ten" >

         <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Set_tag_and_alias"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/ten"
            android:background="@drawable/corners_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/twenty"
            android:paddingTop="@dimen/twenty" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tag" />

                <EditText
                    android:id="@+id/et_tag"
                    style="@style/push_tag"
                    android:layout_width="@dimen/one_hundred_sixty"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="@dimen/five"
                    android:layout_marginRight="@dimen/five"
                    android:textSize="@dimen/fifteen_sp" />

                <Button
                    android:id="@+id/bt_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Set_tag"
                    android:textSize="@dimen/twelve_sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alias:" />

                <EditText
                    android:id="@+id/et_alias"
                    style="@style/push_alias"
                    android:layout_width="160dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/bt_alias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设置Alias"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="#9C9C9C"
            android:orientation="vertical"
             android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="定制通知栏样式"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="@drawable/corners_bg"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <Button
                android:id="@+id/setStyle1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="定制通知栏样式：Basic" />

            <Button
                android:id="@+id/setStyle2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="定制通知栏样式：Custom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="#9C9C9C"
            android:orientation="vertical"
            android:padding="10dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设置"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="@drawable/corners_bg"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >
            <Button
                android:id="@+id/bu_setTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="设置接收push时间" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>